--- a/client-pwa/static/manifest.json
+++ b/client-pwa/static/manifest.json
@@ -3,7 +3,12 @@
   "name": "Piso WiFi",
   "start_url": "/",
   "icons": [
-    "/logo.png"
+    {
+      "purpose": "maskable",
+      "sizes": "512x512",
+      "src": "logo.png",
+      "type": "image/png"
+    }
   ],
   "background-color": "#3367D6",
   "display": "standalone",
