--- a/client-pwa/static/manifest.json
+++ b/client-pwa/static/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/",
   "icons": [
     {
-      "purpose": "maskable",
+      "purpose": "any",
       "sizes": "512x512",
       "src": "logo.png",
       "type": "image/png"
