--- a/client-pwa/static/manifest.json
+++ b/client-pwa/static/manifest.json
@@ -10,7 +10,7 @@
       "type": "image/png"
     }
   ],
-  "background-color": "#3367D6",
+  "background_color": "#3367D6",
   "display": "standalone",
   "scope": "/",
   "theme_color": "#3367D6",
