--- a/client-pwa/static/manifest.json
+++ b/client-pwa/static/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "PWiFi",
   "name": "Piso WiFi",
-  "start_url": "/",
+  "start_url": "/?homescreen=1",
   "icons": [
     {
       "purpose": "any",
@@ -10,9 +10,9 @@
       "type": "image/png"
     }
   ],
-  "background_color": "#3367D6",
+  "background_color": "#CEDCE8",
   "display": "standalone",
   "scope": "/",
-  "theme_color": "#3367D6",
-  "description": "Piso WiFi app"
+  "theme_color": "#CEDCE8",
+  "description": "Piso WiFi App"
 }
