--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
+APScheduler==3.10.4
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -25,15 +26,18 @@ pydantic_core==2.16.3
 pyOpenSSL==24.0.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
 schedule==1.2.1
 setuptools==69.1.1
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.27
 starlette==0.36.3
 typer==0.9.0
 typing_extensions==4.10.0
+tzlocal==5.2
 urllib3==2.2.0
 uvicorn==0.27.1
 uvloop==0.19.0
