--- a/client-pwa/package.json
+++ b/client-pwa/package.json
@@ -36,6 +36,7 @@
 	"type": "module",
 	"dependencies": {
 		"chart.js": "^4.4.1",
+		"chartjs-adapter-moment": "^1.0.1",
 		"lodash": "^4.17.21",
 		"moment": "^2.30.1"
 	}
