--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ click==8.1.7
 cryptography==42.0.2
 distlib==0.3.8
 fastapi==0.110.0
+fastapi-pagination==0.12.24
 FastAPI-SQLAlchemy==0.2.1
 filelock==3.13.1
+greenlet==3.0.3
 h11==0.14.0
 httptools==0.6.1
 idna==3.6
@@ -44,3 +46,4 @@ uvloop==0.19.0
 virtualenv==20.25.1
 watchfiles==0.21.0
 websockets==12.0
+wheel==0.43.0
