Add github action (build & deploy)

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,9 +16,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: ./client-pwa
+
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -32,9 +36,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: cd client-pwa
       - run: npm ci
-      - run: ./node_modules/.bin/vite build
+      - run: node_modules/.bin/vite build
 
       - name: Compress Build Artifacts
         run: tar -czf build-artifacts.tar.gz .svelte-kit
