--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,7 +44,7 @@ jobs:
         working-directory: ./client-pwa
 
       - name: Compress Build Artifacts
-        run: tar -czf build-artifacts.tar.gz .svelte-kit
+        run: tar -czf build-artifacts.tar.gz client-pwa/.svelte-kit
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
