--- a/client-pwa/package.json
+++ b/client-pwa/package.json
@@ -35,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-node": "^1.3.1",
 		"chart.js": "^4.4.1",
 		"chartjs-adapter-moment": "^1.0.1",
 		"lodash": "^4.17.21",
