--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Environment Variables
         run: echo "${{ vars.ENV }}" >> .env
+        working-directory: ./client-pwa
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
