--- a/client-pwa/package.json
+++ b/client-pwa/package.json
@@ -39,6 +39,7 @@
 		"chart.js": "^4.5.1",
 		"chartjs-adapter-moment": "^1.0.1",
 		"lodash": "^4.17.21",
-		"moment": "^2.30.1"
+		"moment": "^2.30.1",
+		"valibot": "^1.1.0"
 	}
 }
